fix: require linked script reads for static web diagnosis