@@ -6,10 +6,14 @@ import dev.talos.runtime.toolcall.ToolAliasPolicy;
 import dev.talos.runtime.toolcall.ToolCallSupport;
 import dev.talos.tools.ToolError;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Function;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /** Verifies whether required current-turn workspace evidence was actually gathered. */
 public final class EvidenceObligationVerifier {
@@ -28,6 +32,8 @@ public final class EvidenceObligationVerifier {
             "talos.grep",
             "talos.retrieve"
     );
+    private static final Pattern SCRIPT_SRC_PATTERN = Pattern.compile(
+            "(?is)<script\\b[^>]*\\bsrc\\s*=\\s*(?:\"([^\"]+)\"|'([^']+)'|([^\\s>]+))");
 
     private EvidenceObligationVerifier() {}
 
@@ -56,6 +62,15 @@ public final class EvidenceObligationVerifier {
             Set<String> expectedTargets,
             List<ToolCallLoop.ToolOutcome> outcomes
     ) {
+        return verify(obligation, expectedTargets, outcomes, null);
+    }
+
+    public static Result verify(
+            EvidenceObligation obligation,
+            Set<String> expectedTargets,
+            List<ToolCallLoop.ToolOutcome> outcomes,
+            Path workspace
+    ) {
         EvidenceObligation safeObligation = obligation == null ? EvidenceObligation.NONE : obligation;
         Set<String> targets = expectedTargets == null ? Set.of() : expectedTargets;
         List<ToolCallLoop.ToolOutcome> safeOutcomes = outcomes == null ? List.of() : outcomes;
@@ -64,7 +79,7 @@ public final class EvidenceObligationVerifier {
             case LIST_DIRECTORY_ONLY -> verifyListDirectoryOnly(safeOutcomes);
             case READ_TARGET_REQUIRED -> verifyReadTargets(targets, safeOutcomes, false);
             case PROTECTED_READ_APPROVAL_REQUIRED -> verifyProtectedRead(targets, safeOutcomes);
-            case STATIC_WEB_DIAGNOSIS_REQUIRED -> verifyStaticWebDiagnosis(targets, safeOutcomes);
+            case STATIC_WEB_DIAGNOSIS_REQUIRED -> verifyStaticWebDiagnosis(targets, safeOutcomes, workspace);
             case WORKSPACE_INSPECTION_REQUIRED, VERIFY_FROM_TRACE_OR_EVIDENCE ->
                     verifyAnyReadOnlyEvidence(safeOutcomes);
             case UNSUPPORTED_CAPABILITY_CHECK_REQUIRED -> verifyUnsupportedCapability(targets, safeOutcomes);
@@ -89,7 +104,8 @@ public final class EvidenceObligationVerifier {
 
     private static Result verifyStaticWebDiagnosis(
             Set<String> expectedTargets,
-            List<ToolCallLoop.ToolOutcome> outcomes
+            List<ToolCallLoop.ToolOutcome> outcomes,
+            Path workspace
     ) {
         if (outcomes.isEmpty()) {
             return Result.unsatisfied("Static web diagnosis evidence was not gathered.");
@@ -107,6 +123,10 @@ public final class EvidenceObligationVerifier {
             if (indexResult.status() != Status.SATISFIED) {
                 return Result.unsatisfied("Static web diagnosis requires reading index.html.");
             }
+            Result linkedScriptResult = verifyLinkedScriptsFromReadIndexes(workspace, outcomes);
+            if (linkedScriptResult.status() != Status.SATISFIED) {
+                return linkedScriptResult;
+            }
             return Result.satisfied("Static web diagnosis evidence was gathered.");
         }
 
@@ -115,12 +135,21 @@ public final class EvidenceObligationVerifier {
             if (indexResult.status() != Status.SATISFIED) {
                 return indexResult;
             }
+            Result linkedScriptResult = verifyLinkedScriptsFromReadIndexes(workspace, outcomes);
+            if (linkedScriptResult.status() != Status.SATISFIED) {
+                return linkedScriptResult;
+            }
             return Result.satisfied("Static web diagnosis evidence was gathered.");
         }
 
-        return hasStaticWebContentInspection(outcomes)
-                ? Result.satisfied("Static web diagnosis evidence was gathered.")
-                : Result.unsatisfied("Static web diagnosis requires reading relevant HTML, CSS, or JavaScript.");
+        if (hasStaticWebContentInspection(outcomes)) {
+            Result linkedScriptResult = verifyLinkedScriptsFromReadIndexes(workspace, outcomes);
+            if (linkedScriptResult.status() != Status.SATISFIED) {
+                return linkedScriptResult;
+            }
+            return Result.satisfied("Static web diagnosis evidence was gathered.");
+        }
+        return Result.unsatisfied("Static web diagnosis requires reading relevant HTML, CSS, or JavaScript.");
     }
 
     private static Result verifyReadTargets(
@@ -213,7 +242,7 @@ public final class EvidenceObligationVerifier {
         for (String target : expectedTargets) {
             if (isIndexHtmlTarget(target)) out.add(target);
         }
-        return Set.copyOf(out);
+        return out.isEmpty() ? Set.of() : java.util.Collections.unmodifiableSet(out);
     }
 
     private static boolean listDirShowsIndexHtml(List<ToolCallLoop.ToolOutcome> outcomes) {
@@ -237,6 +266,118 @@ public final class EvidenceObligationVerifier {
             return true;
         }
         return false;
+    }
+
+    private static Result verifyLinkedScriptsFromReadIndexes(
+            Path workspace,
+            List<ToolCallLoop.ToolOutcome> outcomes
+    ) {
+        Set<String> linkedScripts = linkedExistingScriptTargets(workspace, outcomes);
+        if (linkedScripts.isEmpty()) {
+            return Result.satisfied("Static web diagnosis evidence was gathered.");
+        }
+        Result scriptResult = aggregateTargetResults(
+                linkedScripts,
+                target -> verifySuccessfulReadTarget(target, outcomes),
+                "Static web diagnosis linked script evidence was gathered.");
+        if (scriptResult.status() == Status.SATISFIED) {
+            return Result.satisfied("Static web diagnosis evidence was gathered.");
+        }
+        if (scriptResult.status() == Status.BLOCKED) {
+            return Result.blocked("Static web diagnosis linked script read was blocked by approval.");
+        }
+        return Result.unsatisfied("Static web diagnosis requires reading linked script source target(s): "
+                + String.join(", ", linkedScripts) + ".");
+    }
+
+    private static Set<String> linkedExistingScriptTargets(
+            Path workspace,
+            List<ToolCallLoop.ToolOutcome> outcomes
+    ) {
+        if (workspace == null || outcomes == null || outcomes.isEmpty()) return Set.of();
+        Path ws;
+        try {
+            ws = workspace.toAbsolutePath().normalize();
+        } catch (RuntimeException e) {
+            return Set.of();
+        }
+        Set<String> out = new LinkedHashSet<>();
+        for (ToolCallLoop.ToolOutcome outcome : outcomes) {
+            if (!"talos.read_file".equals(canonicalToolName(outcome.toolName()))) continue;
+            if (!outcome.success() || outcome.denied()) continue;
+            if (!isIndexHtmlTarget(outcome.pathHint())) continue;
+            Path index = resolveWorkspacePath(ws, outcome.pathHint());
+            if (index == null || !Files.isRegularFile(index)) continue;
+            String html;
+            try {
+                html = Files.readString(index);
+            } catch (Exception ignored) {
+                continue;
+            }
+            Matcher matcher = SCRIPT_SRC_PATTERN.matcher(html);
+            while (matcher.find()) {
+                String src = firstNonBlank(matcher.group(1), matcher.group(2), matcher.group(3));
+                Path linked = resolveLinkedSource(ws, index, src);
+                if (linked == null || !Files.isRegularFile(linked)) continue;
+                out.add(normalizePath(ws.relativize(linked).toString()).replace('\\', '/'));
+            }
+        }
+        return out.isEmpty() ? Set.of() : java.util.Collections.unmodifiableSet(out);
+    }
+
+    private static Path resolveWorkspacePath(Path workspace, String pathHint) {
+        if (pathHint == null || pathHint.isBlank()) return null;
+        try {
+            Path candidate = Path.of(pathHint);
+            Path resolved = candidate.isAbsolute()
+                    ? candidate
+                    : workspace.resolve(candidate);
+            resolved = resolved.toAbsolutePath().normalize();
+            return resolved.startsWith(workspace) ? resolved : null;
+        } catch (RuntimeException e) {
+            return null;
+        }
+    }
+
+    private static Path resolveLinkedSource(Path workspace, Path index, String src) {
+        String cleaned = cleanLinkedSource(src);
+        if (cleaned.isBlank()) return null;
+        try {
+            Path resolved = cleaned.startsWith("/")
+                    ? workspace.resolve(cleaned.replaceFirst("^/+", ""))
+                    : index.getParent().resolve(cleaned);
+            resolved = resolved.toAbsolutePath().normalize();
+            return resolved.startsWith(workspace) ? resolved : null;
+        } catch (RuntimeException e) {
+            return null;
+        }
+    }
+
+    private static String cleanLinkedSource(String src) {
+        if (src == null) return "";
+        String cleaned = src.strip().replace('\\', '/');
+        if (cleaned.isBlank()
+                || cleaned.startsWith("#")
+                || cleaned.startsWith("//")
+                || cleaned.toLowerCase(java.util.Locale.ROOT).startsWith("http://")
+                || cleaned.toLowerCase(java.util.Locale.ROOT).startsWith("https://")
+                || cleaned.toLowerCase(java.util.Locale.ROOT).startsWith("data:")
+                || cleaned.toLowerCase(java.util.Locale.ROOT).startsWith("javascript:")) {
+            return "";
+        }
+        int fragment = cleaned.indexOf('#');
+        if (fragment >= 0) cleaned = cleaned.substring(0, fragment);
+        int query = cleaned.indexOf('?');
+        if (query >= 0) cleaned = cleaned.substring(0, query);
+        return cleaned.strip();
+    }
+
+    private static String firstNonBlank(String... values) {
+        if (values == null) return "";
+        for (String value : values) {
+            if (value != null && !value.isBlank()) return value;
+        }
+        return "";
     }
 
     private static boolean isStaticWebTarget(String path) {
